--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native-loading-spinner-overlay": "^0.3.0",
     "react-native-scrollable-tab-view": "^0.5.3",
     "react-native-simple-modal": "^4.0.1",
+    "react-native-spinkit": "^0.1.2",
     "react-native-vector-icons": "^2.0.3"
   }
 }
