--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -7,3 +7,6 @@ project(':react-native-spinkit').projectDir = new File(rootProject.projectDir, '
 
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
+
+include ':pptmapview'
+project(':pptmapview').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps-google/android/library')
