--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "logcat": "adb logcat *:S ReactNative:V ReactNativeJS:V"
   },
   "dependencies": {
+    "fast-html-parser": "^1.0.1",
     "react": "15.2.1",
     "react-native": "^0.30.0",
     "react-native-accordion": "^1.0.1",
