devide LocalList into Surf, Gliding

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=maestrolsj-key
+MYAPP_RELEASE_STORE_PASSWORD=sm6300sm
+MYAPP_RELEASE_KEY_PASSWORD=sm6300sm
