--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "^0.30.0",
     "react-native-accordion": "^1.0.1",
     "react-native-action-button": "^1.1.11",
+    "react-native-collapsible": "^0.7.0",
     "react-native-easy-toast": "^1.0.1",
     "react-native-maps-google": "^1.1.4",
     "react-native-parallax-scroll-view": "^0.19.0",
