--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "15.3.2",
     "react-native": "0.33.0",
     "react-native-accordion": "^1.0.1",
-    "react-native-action-button": "^2.0.3",
+    "react-native-action-button": "2.0.3",
     "react-native-collapsible": "^0.7.0",
     "react-native-easy-toast": "^1.0.2",
     "react-native-maps-google": "^1.1.4",
