camera modal modified, add Carousel

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "react-native": "0.33.0",
     "react-native-accordion": "^1.0.1",
     "react-native-action-button": "2.0.3",
+    "react-native-carousel": "^0.10.0",
     "react-native-collapsible": "^0.7.0",
     "react-native-easy-toast": "^1.0.2",
-    "react-native-maps-google": "^1.1.4",
     "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-simple-modal": "^4.0.1",
