--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-carousel": "^0.10.0",
     "react-native-collapsible": "^0.7.0",
     "react-native-easy-toast": "^1.0.2",
+    "react-native-lazyload": "^1.1.0",
     "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-simple-modal": "^4.0.1",
