--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.33.0",
     "react-native-accordion": "^1.0.1",
     "react-native-action-button": "2.0.3",
+    "react-native-cancelable-fetch": "^0.1.1",
     "react-native-carousel": "^0.10.0",
     "react-native-collapsible": "^0.7.0",
     "react-native-easy-toast": "^1.0.2",
