add version check

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,7 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-vector-icons')
     compile project(':react-native-spinkit')
+    compile project(':react-native-version-check')
 }
 
 // Run this once to be able to run the application with BUCK
