--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-simple-modal": "^4.0.1",
     "react-native-spinkit": "^0.1.3",
-    "react-native-vector-icons": "^2.1.0"
+    "react-native-vector-icons": "^2.1.0",
+    "react-native-version-check": "^0.4.0"
   }
 }
