--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -10,3 +10,5 @@ project(':react-native-spinkit').projectDir = new File(rootProject.projectDir, '
 
 include ':react-native-version-check'
 project(':react-native-version-check').projectDir = new File(rootProject.projectDir,    '../node_modules/react-native-version-check/android')
+include ':react-native-linear-gradient'
+project(':react-native-linear-gradient').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-linear-gradient/android')
