--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-collapsible": "^0.7.0",
     "react-native-easy-toast": "^1.0.2",
     "react-native-lazyload": "^1.1.0",
+    "react-native-linear-gradient": "^1.5.14",
     "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-simple-modal": "^4.0.1",
