--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-carousel": "^0.10.0",
     "react-native-collapsible": "^0.7.0",
     "react-native-easy-toast": "^1.0.2",
+    "react-native-google-analytics-bridge": "^4.0.1",
     "react-native-lazyload": "^1.1.0",
     "react-native-linear-gradient": "^1.5.14",
     "react-native-parallax-scroll-view": "^0.19.0",
