--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-simple-modal": "^4.0.1",
     "react-native-spinkit": "^0.1.3",
+    "react-native-swipe-list-view": "^0.3.1",
     "react-native-vector-icons": "^2.1.0",
     "react-native-version-check": "^0.4.0",
     "realm": "^0.14.3"
