--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,7 +90,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.windPicker"
+        applicationId "com.windpicker"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
