--- a/ios/WindFinder.xcodeproj/xcshareddata/xcschemes/WindFinder.xcscheme
+++ b/ios/WindFinder.xcodeproj/xcshareddata/xcschemes/WindFinder.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "WindFinder.app"
-               BlueprintName = "WindFinder"
-               ReferencedContainer = "container:WindFinder.xcodeproj">
+               BuildableName = "WindPicker.app"
+               BlueprintName = "WindPicker"
+               ReferencedContainer = "container:WindPicker.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "WindFinderTests.xctest"
-               BlueprintName = "WindFinderTests"
-               ReferencedContainer = "container:WindFinder.xcodeproj">
+               BuildableName = "WindPickerTests.xctest"
+               BlueprintName = "WindPickerTests"
+               ReferencedContainer = "container:WindPicker.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "WindFinderTests.xctest"
-               BlueprintName = "WindFinderTests"
-               ReferencedContainer = "container:WindFinder.xcodeproj">
+               BuildableName = "WindPickerTests.xctest"
+               BlueprintName = "WindPickerTests"
+               ReferencedContainer = "container:WindPicker.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "WindFinder.app"
-            BlueprintName = "WindFinder"
-            ReferencedContainer = "container:WindFinder.xcodeproj">
+            BuildableName = "WindPicker.app"
+            BlueprintName = "WindPicker"
+            ReferencedContainer = "container:WindPicker.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -77,9 +77,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "WindFinder.app"
-            BlueprintName = "WindFinder"
-            ReferencedContainer = "container:WindFinder.xcodeproj">
+            BuildableName = "WindPicker.app"
+            BlueprintName = "WindPicker"
+            ReferencedContainer = "container:WindPicker.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -96,9 +96,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "WindFinder.app"
-            BlueprintName = "WindFinder"
-            ReferencedContainer = "container:WindFinder.xcodeproj">
+            BuildableName = "WindPicker.app"
+            BlueprintName = "WindPicker"
+            ReferencedContainer = "container:WindPicker.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
