--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,8 +93,8 @@ android {
         applicationId "com.windpicker"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -148,6 +148,8 @@ dependencies {
     compile project(':react-native-vector-icons')
     compile project(':react-native-spinkit')
     compile project(':react-native-version-check')
+    compile (name: "xwalk_core_library-18.48.477.13", ext: "aar")
+    compile project(':CrosswalkWebView')
 }
 
 // Run this once to be able to run the application with BUCK
