--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,7 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
-MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
-MYAPP_RELEASE_KEY_ALIAS=my-key-alias
-MYAPP_RELEASE_STORE_PASSWORD=sm6300sm
-MYAPP_RELEASE_KEY_PASSWORD=sm6300sm
+MYAPP_RELEASE_STORE_FILE=windpicker-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=windpicker-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=sm6300smsm!
+MYAPP_RELEASE_KEY_PASSWORD=sm6300smsm!
