--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,7 @@ dependencies {
     compile project(':react-native-version-check')
     compile (name: "xwalk_core_library-18.48.477.13", ext: "aar")
     compile project(':CrosswalkWebView')
+    compile 'com.google.firebase:firebase-core:10.0.1'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -158,3 +159,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
   from configurations.compile
   into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
