--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "fast-html-parser": "^1.0.1",
+    "firebase": "^3.6.7",
     "react": "15.3.2",
     "react-native": "0.33.0",
     "react-native-accordion": "^1.0.1",
@@ -15,6 +16,7 @@
     "react-native-cancelable-fetch": "^0.1.1",
     "react-native-carousel": "^0.10.0",
     "react-native-collapsible": "^0.7.0",
+    "react-native-drawer": "^2.3.0",
     "react-native-easy-toast": "^1.0.2",
     "react-native-google-analytics-bridge": "^4.0.1",
     "react-native-lazyload": "^1.1.0",
@@ -23,7 +25,6 @@
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-simple-modal": "^4.0.1",
     "react-native-spinkit": "^0.1.3",
-    "react-native-swipe-list-view": "^0.3.1",
     "react-native-vector-icons": "^2.1.0",
     "react-native-version-check": "^0.4.0",
     "react-native-webview-crosswalk": "^0.4.0",
