--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "react-native-cancelable-fetch": "^0.1.1",
     "react-native-carousel": "^0.10.0",
     "react-native-collapsible": "^0.7.0",
-    "react-native-drawer": "^2.3.0",
     "react-native-easy-toast": "^1.0.2",
     "react-native-google-analytics-bridge": "^4.0.1",
     "react-native-lazyload": "^1.1.0",
     "react-native-linear-gradient": "1.5.15",
     "react-native-parallax-scroll-view": "^0.19.0",
     "react-native-scrollable-tab-view": "^0.6.0",
+    "react-native-simple-drawer": "^0.4.5",
     "react-native-simple-modal": "^4.0.1",
     "react-native-spinkit": "^0.1.3",
     "react-native-vector-icons": "^2.1.0",
