--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "react-native-simple-modal": "^4.0.1",
     "react-native-spinkit": "^0.1.3",
     "react-native-vector-icons": "^2.1.0",
-    "react-native-version-check": "^0.4.0",
+    "react-native-version-check": "^1.1.0",
     "react-native-webview-crosswalk": "0.5.0",
-    "realm": "^0.14.3"
+    "realm": "0.15.0"
   }
 }
