--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "logcat": "adb logcat *:S ReactNative:V ReactNativeJS:V"
   },
   "dependencies": {
+    "fast-html-parser": "^1.0.1",
     "firebase": "^3.6.7",
     "react": "15.4.2",
-    "react-native": "0.41.2",
+    "react-native": "0.38.0",
     "react-native-action-button": "1.1.11",
     "react-native-cancelable-fetch": "^0.1.1",
     "react-native-carousel": "^0.10.0",
