--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "logcat": "adb logcat *:S ReactNative:V ReactNativeJS:V"
   },
   "dependencies": {
-    "fast-html-parser": "^1.0.1",
-    "firebase": "^3.6.7",
+
     "react": "15.4.2",
     "react-native": "0.38.0",
+
     "react-native-action-button": "1.1.11",
     "react-native-cancelable-fetch": "^0.1.1",
     "react-native-carousel": "^0.10.0",
@@ -23,6 +23,8 @@
     "react-native-spinkit": "^0.1.3",
     "react-native-vector-icons": "^2.1.0",
     "react-native-version-check": "^1.1.0",
-    "realm": "0.15.0"
+    "realm": "0.15.0",
+    "fast-html-parser": "^1.0.1",
+    "firebase": "^3.6.7"
   }
 }
