--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-spinkit": "^0.1.3",
     "react-native-vector-icons": "^2.1.0",
     "react-native-version-check": "^1.1.0",
+    "react-native-navi-drawer":"^1.0.0",
     "realm": "0.15.0"
   }
 }
