--- a/package.json
+++ b/package.json
@@ -8,20 +8,29 @@
     "logcat": "adb logcat *:S ReactNative:V ReactNativeJS:V"
   },
   "dependencies": {
+    "firebase": "^3.7.5",
     "react": "15.4.2",
     "react-native": "0.38.0",
     "react-native-action-button": "1.1.11",
     "react-native-cancelable-fetch": "^0.1.1",
     "react-native-easy-toast": "^1.0.2",
     "react-native-lazyload": "^1.1.0",
+    "react-native-linear-gradient": "^1.5.14",
     "react-native-navi-drawer": "^1.0.0",
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-simple-modal": "^4.0.1",
+    "react-native-spinkit": "^0.1.3",
     "react-native-vector-icons": "^4.0.0",
     "react-native-version-check": "^1.1.0",
-    "react-native-linear-gradient": "^1.5.14",
-    "react-native-spinkit": "^0.1.3",
     "realm": "0.15.0"
+  },
+  "jest": {
+    "preset": "react-native"
+  },
+  "devDependencies": {
+    "babel-jest": "19.0.0",
+    "babel-preset-react-native": "1.9.1",
+    "jest": "19.0.2",
+    "react-test-renderer": "15.4.2"
   }
-
 }
