--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-action-button": "1.1.11",
     "react-native-cancelable-fetch": "^0.1.1",
     "react-native-easy-toast": "^1.0.2",
+    "react-native-firebase-analytics": "^3.0.0",
     "react-native-lazyload": "^1.1.0",
     "react-native-linear-gradient": "^1.5.14",
     "react-native-navi-drawer": "^1.0.0",
