--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@
 
 target 'WindPicker' do
   # Uncomment this line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
+    use_frameworks!
 
  # Pods for WindPicker
   pod 'FirebaseAnalytics'
