--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-simple-modal": "^5.0.0",
     "react-native-spinkit": "^0.1.3",
     "react-native-vector-icons": "^4.0.0",
-    "realm": "0.15.0"
+    "realm": "0.15.0",
+    "react-native-code-push": "^1.16.1-beta"
   }
 }
