--- a/package.json
+++ b/package.json
@@ -9,22 +9,21 @@
     "adblog": "adb logcat -v time -s FA FA-SVC"
   },
   "dependencies": {
-    "firebase": "^3.7.5",
     "react": "15.4.2",
     "react-native": "0.38.0",
     "react-native-action-button": "1.1.11",
     "react-native-cancelable-fetch": "^0.1.1",
+    "react-native-code-push": "^1.16.1-beta",
     "react-native-easy-toast": "^1.0.2",
-    "react-native-firebase-analytics": "^1.0.6",
+    "react-native-firebase": "^1.0.2",
     "react-native-lazyload": "^1.1.0",
     "react-native-linear-gradient": "^1.5.14",
+    "react-native-maps": "0.12.5",
     "react-native-navi-drawer": "^1.0.0",
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-simple-modal": "^5.0.0",
     "react-native-spinkit": "^0.1.3",
     "react-native-vector-icons": "^4.0.0",
-    "realm": "0.15.0",
-    "react-native-code-push": "^1.16.1-beta",
-    "react-native-maps" : "0.12.5"
+    "realm": "0.15.0"
   }
 }
